Add the 2 maps + some little corrections

--- a/main.lyx
+++ b/main.lyx
@@ -105,7 +105,7 @@ niste.
 
 \begin_layout Standard
 Suivant une ligne spatiale et temporelle parfois décousue, vous y trouverez
- 36
+ 35
 \begin_inset space ~
 \end_inset
 
@@ -138,7 +138,7 @@ Descente de Loire
 \end_inset
 
 , ou comment descendre le plus long fleuve de France, de la source à l'estuaire,
- à pieds et en kayak, pendant 2
+ à pied et en kayak, pendant 2
 \begin_inset space ~
 \end_inset
 
@@ -190,6 +190,17 @@ Nous n'en disons pas plus et vous souhaitons bonne lecture.
 Descente de Loire
 \end_layout
 
+\begin_layout Part*
+\begin_inset Graphics
+	filename Maps/Map_Loire.png
+	lyxscale 25
+	width 12.5cm
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Section*
 Traversée de l'Ardèche
 \end_layout
@@ -222,7 +233,7 @@ Sur le pas d'une porte, une maman qui pleure dans vos bras.
 \begin_inset Newline newline
 \end_inset
 
-Et sur le quai d'une gare, une maman qui vous embrasse de tout son soûl.
+Et sur le quai d'une gare, une maman qui vous embrasse tout son soûl.
 \begin_inset Newline newline
 \end_inset
 
@@ -2164,6 +2175,17 @@ Ainsi se termina notre descente de Loire du printemps 2011.
 Grande marche
 \end_layout
 
+\begin_layout Part*
+\begin_inset Graphics
+	filename Maps/Map_LongWalk.png
+	lyxscale 25
+	width 12.5cm
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Section*
 Cap à l'est !
 \end_layout
@@ -2290,7 +2312,7 @@ status collapsed
 
 \begin_layout Plain Layout
 Les adeptes de cet état d'esprit partent de quelques jours à plusieurs mois
- (à pieds, en vélo, en kayak...), avec un barda complet, économique et surtout
+ (à pied, en vélo, en kayak...), avec un barda complet, économique et surtout
  très léger.
  Pour en savoir plus : www.randonner-leger.org
 \end_layout
@@ -3234,7 +3256,7 @@ Jacques
  -- d'expulser les pèlerins qui étaient en nous, tachant d'offrir aux rencontres
  passagères l'image de simples vagabonds.
  Nous disions, à cette fin : que nos affaires avaient commencé sur un kayak,
- il y a deux mois alors, et qu'elles nous mèneraient, à pieds, au bout de
+ il y a deux mois alors, et qu'elles nous mèneraient, à pied, au bout de
  l'Espagne ; que nous allions lentement, au gré des paysages, au gré des
  rencontres, au gré des battements de nos cœurs ; que le but n'était qu'un
  prétexte ; et que c'était la déambulation qui nous faisait vivre.
@@ -5789,7 +5811,7 @@ Le temps s'arrête.
 \begin_layout Standard
 Mais la course folle des aiguilles, elle, continue.
  Nous reprenons la marche une matinée, une seule.
- Nous n'irons pas plus loin, à pieds, que la ville d'Entreveaux.
+ Nous n'irons pas plus loin, à pied, que la ville d'Entreveaux.
  Le chemin que nous voulions emprunter jusqu'à Nice n'était pas adapté à
  notre marche.
 \end_layout
@@ -6846,7 +6868,7 @@ GR
 \begin_layout Standard
 Vos rêves enfouis d'aventure vous font poursuivre.
  Jusqu'où pouvez-vous aller, en partant du pas de votre porte et en allant
- à pieds ? Le chemin continue.
+ à pied ? Le chemin continue.
  Il borde un fleuve, traverse des vignes, plonge dans des forêts et des
  marais.
  Dans votre imaginaire, des images affluent, des sons et odeurs s'éveillent.
