--- a/main.lyx
+++ b/main.lyx
@@ -3,16 +3,33 @@
 \begin_document
 \begin_header
 \textclass freepius_book
+\begin_preamble
+%% titlesec package :
+
+% each section on a new page
+\newcommand{\sectionbreak}{\clearpage}
+
+% \part style
+\titleformat{\part}
+  [display]
+  {\newgeometry{margin=1.4cm}\pagestyle{empty}}
+  {\filcenter\partname}
+  {1ex}
+  {\titlerule\vspace{1ex}\filcenter\Huge\bfseries}
+  [\restoregeometry]
+
+\titlespacing*{\part}{0pt}{0pt}{0pt}
+\end_preamble
 \use_default_options true
 \maintain_unincluded_children false
 \language french
 \language_package default
 \inputencoding latin9
 \fontencoding global
-\font_roman default
+\font_roman times
 \font_sans default
 \font_typewriter default
-\font_default_family default
+\font_default_family rmdefault
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
@@ -24,7 +41,7 @@
 \output_sync 0
 \bibtex_command default
 \index_command default
-\paperfontsize default
+\paperfontsize 12
 \spacing onehalf
 \use_hyperref false
 \papersize a5paper
@@ -43,10 +60,10 @@
 \shortcut idx
 \color #008000
 \end_index
-\leftmargin 1.7cm
-\topmargin 1.6cm
-\rightmargin 1.7cm
-\bottommargin 1.3cm
+\leftmargin 2.4cm
+\topmargin 2cm
+\rightmargin 2.4cm
+\bottommargin 2.4cm
 \secnumdepth 3
 \tocdepth 3
 \paragraph_separation indent
@@ -54,7 +71,7 @@
 \quotes_language french
 \papercolumns 1
 \papersides 2
-\paperpagestyle default
+\paperpagestyle plain
 \bullet 0 0 0 -1
 \bullet 1 0 6 -1
 \bullet 2 0 10 -1
@@ -188,13 +205,22 @@ Nous n'en disons pas plus et vous souhaitons bonne lecture.
 
 \begin_layout Part
 Descente de Loire
-\end_layout
+\begin_inset Newline newline
+\end_inset
 
-\begin_layout Part*
+
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset Newline newline
+\end_inset
+
+
 \begin_inset Graphics
 	filename Maps/Map_Loire.png
 	lyxscale 25
-	width 12.5cm
+	width 12cm
 
 \end_inset
 
@@ -2173,13 +2199,22 @@ Ainsi se termina notre descente de Loire du printemps 2011.
 
 \begin_layout Part
 Grande marche
-\end_layout
+\begin_inset Newline newline
+\end_inset
 
-\begin_layout Part*
+
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset Newline newline
+\end_inset
+
+
 \begin_inset Graphics
 	filename Maps/Map_LongWalk.png
 	lyxscale 25
-	width 12.5cm
+	width 12cm
 
 \end_inset
 
@@ -7500,66 +7535,6 @@ Une toute dernière précision, d'importance cependant.
 carnet de route
 \emph default
 .
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-begin{flushleft}
-\end_layout
-
-\begin_layout Plain Layout
-
-	
-\backslash
-newgeometry{margin=0.5cm, left=1.5cm}
-\end_layout
-
-\begin_layout Plain Layout
-
-	
-\backslash
-pagestyle{empty}
-\end_layout
-
-\end_inset
-
-
-\begin_inset CommandInset include
-LatexCommand include
-filename "Roadbook Loire.lyx"
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-end{flushleft}
-\end_layout
-
-\begin_layout Plain Layout
-
-
-\backslash
-restoregeometry
-\end_layout
-
-\end_inset
-
-
 \end_layout
 
 \end_body
