Last spelling and grammar corrections.

--- a/main.lyx
+++ b/main.lyx
@@ -216,9 +216,7 @@ Descente de Loire
 
 
 \begin_inset Graphics
-	filename Maps/Map_Loire.png
-	lyxscale 25
-	width 12cm
+	filename Maps/Map_Loire.eps
 
 \end_inset
 
@@ -629,7 +627,7 @@ Baptême ligérien
 \align right
 
 \emph on
-Récit de Retournac à Digoin ; 13 au 27 avril ; 215
+Récit de Retournac à Digoin ; 13 au 27 avril ; 220
 \begin_inset space \thinspace{}
 \end_inset
 
@@ -774,7 +772,7 @@ Contrairement à un canoë qui est : plus large, plus haut, dans lequel on
 \begin_inset Quotes fld
 \end_inset
 
-l'entre deux guerres
+l'entre-deux guerres
 \begin_inset Quotes frd
 \end_inset
 
@@ -940,7 +938,7 @@ Mais, lorsqu'à chaque instant, en chaque endroit (même les plus reculés),
  nauséabondes -- modelant le fleuve et ses rives : les nombreux ponts, et
  les blocs en vrac à leurs pieds ; les chemins de fer discrets ; les routes
  petites et calmes, ou grandes et bruyantes ; les fils électriques et leurs
- pilonnes, passant d'un bout à l'autre de tout panorama ; les jolis villages,
+ pylônes, passant d'un bout à l'autre de tout panorama ; les jolis villages,
  anciens ou plus neufs ; quelques châteaux posés de manière ahurissante,
  pour raisons stratégiques ; de trop nombreuses maisons plantées au beau
  milieu d'un magnifique n'importe où, qui n'ont rien à y foutre ! ; et puis,
@@ -985,7 +983,7 @@ e que, oui, c'était aussi cette Loire là que nous étions venu chercher.
  la Loire nous apportait sur son lit scintillant : embâcles de rochers ou
  d'arbres -- petits à gros -- et leurs remous -- gros à petits -- ; nombreuses
  et larges gravières et sablières ; tapis de renoncules envahissantes ;
- et nomdreux déchets humains.
+ et nombreux déchets humains.
 \shape smallcaps
 
 \begin_inset VSpace bigskip
@@ -1101,7 +1099,7 @@ Contrastes de Loire
 \align right
 
 \emph on
-Récit de Digoin à Amboise ; 27 avril au 12 mai ; 400
+Récit de Digoin à Amboise ; 27 avril au 12 mai ; 390
 \begin_inset space \thinspace{}
 \end_inset
 
@@ -1681,7 +1679,7 @@ Le pont passé, nous continuâmes notre chemin, cahin-caha, entre eaux et
 \end_layout
 
 \begin_layout Standard
-C'est alors qu'une famille de canards colvert passa sous une arche proche,
+C'est alors qu'une famille de canards colverts passa sous une arche proche,
  nous montrant le chemin.
  Usant d'un vif esprit d'analyse, je dis : 
 \begin_inset Quotes fld
@@ -1948,7 +1946,7 @@ extravagances
 
 \begin_layout Standard
 Jusqu'à Nantes, les paysages ne se sont pas bouleversés et étaient formés
- -- toujours -- des mêmes briques élémentaires : les plages de sables, les
+ -- toujours -- des mêmes briques élémentaires : les plages de sable, les
  arbres bordant le fleuve, peu de remous, un niveau d'eau bas, un ciel très
  bleu un jour, très nuageux l'autre, mi-figue mi-raisin le troisième.
  Des merveilles à contempler du lever au coucher.
@@ -1975,7 +1973,7 @@ Je m'égare.
 \begin_inset space ~
 \end_inset
 
-2011 a enlevé beaucoup de sa superbe, à ce grand labyrinthe.
+2011 a enlevé beaucoup de sa superbe à ce grand labyrinthe.
  Et bien souvent, de toutes les issues possibles, il n'en restait qu'une
  ou deux tout juste praticables pour embarcations plates.
  Cette sécheresse fut l'une des principales composantes de notre descente
@@ -2054,9 +2052,9 @@ h
 \end_inset
 
 30.
- Ce dernier départ, d'une étape d'une vingtaine de kilomètres, se fît dans
+ Ce dernier départ, d'une étape d'une vingtaine de kilomètres, se fit dans
  les meilleures conditions.
- La veille, nous fument chaleureusement accueillis par deux tantes, un papa,
+ La veille, nous fûmes chaleureusement accueillis par deux tantes, un papa,
  une maman, un casse-croûte, un éléphant mécanique
 \begin_inset Foot
 status collapsed
@@ -2102,10 +2100,10 @@ Luxe
 
 \end_inset
 
- ! Tout ça ! Notre dernière nuit se fît douillette, posée sur le moelleux
- d'un bon matelas.
- Et le petit déjeuner fut paisible, sous les auspices de sainte Christine
- et saint Benoît (tante et tonton).
+ ! Tout ça ! Notre dernière nuit fut douillette, posée sur le moelleux d'un
+ bon matelas.
+ Et le petit déjeuner fut paisible, en l'hospice de sainte Christine et
+ saint Benoît (tante et tonton).
  Autant vous dire que nous partîmes dans d'excellentes dispositions, prêts
  à en découdre et en finir, à fouetter les vagues et à pagayer, 
 \emph on
@@ -2157,8 +2155,8 @@ Un paysage bouleversant s'anima alors tous azimuts.
 
 \begin_layout Standard
 Le fleuve s'était amplement élargi, doublant ou triplant sa corpulence.
- Et les rives -- extravagantes compositions de roseaux, de gravas et de
- prés humides -- formaient deux haies d'honneur, comme pour nous accueillir.
+ Et les rives -- extravagante composition de roseaux, de gravas et de prés
+ humides -- formaient deux haies d'honneur, comme pour nous accueillir.
  Alors, entre ces rives et au cœur de cette Loire large et agitée, trempés
  par un rideau d'une fine pluie, ballotés par les vagues et leurs creux
  d'un mètre parfois, dans une exaltation, une transe, une panique et une
@@ -2210,9 +2208,7 @@ Grande marche
 
 
 \begin_inset Graphics
-	filename Maps/Map_LongWalk.png
-	lyxscale 25
-	width 12cm
+	filename Maps/Map_LongWalk.eps
 
 \end_inset
 
@@ -2227,7 +2223,7 @@ Cap à l'est !
 \align right
 
 \emph on
-Récit de l'entre-deux puis de Pontchateau à Mézières-en-Brenne
+Récit de l'entre-deux puis de Pontchâteau à Mézières-en-Brenne
 \begin_inset Newline newline
 \end_inset
 
@@ -2411,8 +2407,7 @@ Un mois déjà.
 \end_layout
 
 \begin_layout Standard
-De Pont\SpecialChar \nobreakdash-
-Château en Loire\SpecialChar \nobreakdash-
+De Pontchâteau en Loire\SpecialChar \nobreakdash-
 Atlantique à Mézières\SpecialChar \nobreakdash-
 en\SpecialChar \nobreakdash-
 Brenne en Indre, ces godillots
@@ -2429,8 +2424,7 @@ retournements de sablier, le long d'un itinéraire fiévreux inventé par une
 \end_layout
 
 \begin_layout Standard
-Les premières foulées se sont faites au Calvaire de Pont\SpecialChar \nobreakdash-
-Château, ont longé
+Les premières foulées se sont faites au Calvaire de Pontchâteau, ont longé
  le Sillon
 \begin_inset space ~
 \end_inset
@@ -2484,7 +2478,7 @@ Nature
 \end_layout
 
 \begin_layout Standard
-Ainsi, nous avons pu : admirer les hérons cendrés, pourprés et gardes bœufs
+Ainsi, nous avons pu : admirer les hérons cendrés, pourprés et garde-bœufs
  en marais et en étangs ; bougonner contre les élevages intensifs de poulets,
  de pommes et d'humains (dans leurs lotissements maussades) ; accompagner
  -- à contre courant -- la Loire et nombre de ses veines, nous y plongeant
@@ -2719,7 +2713,7 @@ ac.
 La patience est récompensée lorsque l'on voit : voler, au-dessus de sa tête,
  un élégant héron pourpré ; passer, en toute hâte, un martin-pêcheur trop
  pressé ; voler un groupe de spatules, reconnues au dernier moment ; ou
- des hérons gardes bœufs, restant sous les pattes protectrices de bovidés.
+ des hérons garde-bœufs, restant sous les pattes protectrices de bovidés.
  On assiste également à des scènes communes, pourtant invariablement merveilleus
 es : un héron cendré qui s'envole ; une aigrette garzette en recherche de
  nourriture ; des mouettes en grandes colonies ; des vanneaux huppés chanteurs
@@ -2813,6 +2807,20 @@ Le concombre nous maudit
 \end_layout
 
 \begin_layout Standard
+\align right
+
+\emph on
+14 juin ; Mathieu
+\shape smallcaps
+\emph default
+
+\begin_inset VSpace smallskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
 \paragraph_spacing single
 
 \size small
@@ -2858,25 +2866,11 @@ crise du concombre
 Dès son début, une véritable hystérie culinaire -- envers les légumes crus
  en général, et le concombre en particulier -- s'est emparée des consommateurs,
  largement attisée et amplifiée par l'alarmisme des autorités sanitaires
- et le sensationnalisme des médias de masses.
+ et le sensationnalisme des médias de masse.
  En fin de compte, l'épidémie a certainement été causée par des graines
- germées
+ germées.
 \shape smallcaps
 \size default
-
-\begin_inset VSpace smallskip
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\align right
-
-\emph on
-14 juin ; Mathieu
-\shape smallcaps
-\emph default
 
 \begin_inset VSpace smallskip
 \end_inset
@@ -3031,7 +3025,7 @@ le\SpecialChar \nobreakdash-
 Rideau.
  Comme voisins de pension campagnarde, nous avions, ce soir là, un couple
  de faisans et une famille de gros lièvres (gambadeurs et à peine farouches).
- Les salutations faites, la tente piquée et le plat de nouilles mollement
+ Les salutations faites, la tente plantée et le plat de nouilles mollement
  avalé, nous nous mîmes au lit, à la faveur d'une douce fraîcheur de fin
  de soirée.
  Tout semblait paisible sous le grandiose coucher de soleil, qui peignait
@@ -3183,15 +3177,8 @@ Depuis un mois, nous parcourons la campagne française et sa mosaïque de
  paysages : champs cultivés de blé, maïs, vignes...
  ; champs au repos, parfois parsemés de bottes de paille ; marais ; étangs
  ; massifs forestiers et leurs lisières.
- Cette campagne est le lieu de vie de nombreuses espèces 
-\begin_inset Quotes fld
-\end_inset
-
-sauvages
-\begin_inset Quotes frd
-\end_inset
-
-, qui ne se laissent pas facilement observées, même de loin.
+ Cette campagne est le lieu de vie de nombreuses espèces sauvages, qui ne
+ se laissent pas facilement observées, même de loin.
  Nos sites de bivouac, bien souvent à l'écart de l'homme (par exemple, des
  champs proches de bosquets ou sous-bois), sont des postes avancés pour
  l'observation de ces 
@@ -3320,8 +3307,8 @@ anciens combattants
 \begin_inset Quotes frd
 \end_inset
 
- -- sans paroles ni gestes de notre part -- nous faisaient savoir qu'ils
- savaient ce que renfermaient nos âmes.
+ -- sans parole ni geste de notre part -- nous faisaient savoir qu'ils savaient
+ ce que renfermaient nos âmes.
  Même l'alcoolique du coin nous débitait, au quart de tour, notre destination
  et nos raisons.
  Et au sortir d'un bar, un ecclésiastique s'empressait de vouloir nous tamponner
@@ -3415,7 +3402,7 @@ Francis.
 ans et des moustaches ; des mollets et un cœur gros comme la liberté ; l'ivresse
  du libertaire et l'âme du voyageur.
  Et il crapahute, toujours, sur sa lourde bicyclette.
- Des souvenirs pleins la tête et du pinard dans les sacoches, Francis, c'est
+ Des souvenirs plein la tête et du pinard dans les sacoches, Francis, c'est
  du genre à vous faire oublier la connerie humaine.
 \end_layout
 
@@ -3634,7 +3621,7 @@ nt, aux automobilistes, leurs traversées), mais nous si ! Au bord d'un étang,
  On y trouve aussi et en vrac : des espèces végétales de zones humides et
  de landes (roseaux, salicaires, bruyères...) ; de nombreuses espèces de libellules
  et papillons ; une large avifaune dont de nombreux ardéidés (hérons cendrés,
- pourprés et gardes bœufs, blongios nains, butors étoilés...) ; quelques reptiles
+ pourprés et garde-bœufs, blongios nains, butors étoilés...) ; quelques reptiles
  ; des mammifères de landes et de forêts (cerfs, sangliers...) ; etc.
 \end_layout
 
@@ -3650,7 +3637,7 @@ me
 
 \end_inset
 
- Barbarin, nous régalait de super petits-déjeuners complets (avec de nombreux
+ Barbarin, nous régalait de super petits déjeuners complets (avec de nombreux
  produits de sa ferme).
  Nos papilles ont également dégusté quelques spécialités brennoises (allez
  donc, au restaurant de la 
@@ -3709,7 +3696,7 @@ hies de Creuse, je vais tâcher de vous les écrire en quelques lignes.
 \begin_layout Standard
 Notre marche non-forcée nous a fait découvrir la très verte Creuse, du nord-oues
 t au sud-ouest, puis du sud-ouest à la mi-est.
- Les cieux nuageux, et leurs fréquentes et parfois longues pluies, ont été
+ Les ciels nuageux, et leurs fréquentes et parfois longues pluies, ont été
  nos compagnons indéfectibles.
  Et la boue est devenue l'intime amie de nos semelles.
  Tous les paysages pouvaient se résumer en une couche blanche nuageuse,
@@ -3758,7 +3745,7 @@ juillet
 \begin_layout Standard
 Voyez la luminosité globale du cliché : elle est blafarde, presque fantomatique.
  C'est qu'en ce jour -- le premier de notre cinquième département -- le
- ciel est chargé d'une couche nuageuse épaisse, un brouillard froid qui
+ ciel est chargé d'une couche nuageuse épaisse : un brouillard froid qui
  crache ses fines gouttes depuis le matin.
 \end_layout
 
@@ -3779,8 +3766,8 @@ kilomètres plus loin.
 \begin_inset space ~
 \end_inset
 
-kilomètres au nord, il y a le barrage électrique d'Éguzon qui crée, en amont,
- une énorme retenue d'eau.
+kilomètres au nord, il y a le barrage électrique d'Éguzon qui crée une énorme
+ retenue d'eau.
  EDF exploite, dans ces gorges creusoises, pas moins de six barrages ! Une
  rivière dans une gorge est une pépite d'or pour une compagnie d'électricité.
  Cette compagnie est-elle aussi dorée pour l'environnement, la nature, le
@@ -4313,7 +4300,7 @@ août (jour fatidique), c'est au son des cloches de centaines de moutons
 \begin_layout Standard
 En direction du puy de Sancy, nous avions (littéralement) la tête dans les
  nuages et le cœur léger.
- Que le chemin fut court ; mais nous eûmes la chance de voir : un chamois,
+ Que le chemin fût court ; mais nous eûmes la chance de voir : un chamois,
  un groupe de six mouflons, une marmotte et quelques faucons.
  Au sommet du Sancy, le gris était partout ; impossible de voir quoi que
  ce soit, la belle affaire ! Mais ce fut l'occasion, en attendant une éclaircie,
@@ -4365,7 +4352,7 @@ Bistrot
  Jean.
  Au terme du repas, nous nous sentions en famille.
  La nuit fut venteuse dans le champ d’Hélène.
- Mais le petit-déjeuner fut doux, aux côtés de la généreuse tenancière.
+ Mais le petit déjeuner fut doux, aux côtés de la généreuse tenancière.
  Que nous aurions aimé rester dans un petit coin de ce bistrot, pour voir
  vivre ces deux extraordinaires personnages.
  Nous avons pourtant repris la route, les cœurs légers et pleins d’espoirs.
@@ -4642,7 +4629,7 @@ Flour, jolie vieille ville posée sur des orgues basaltiques, à l'est
 
 \begin_layout Standard
 Puis, la Lozère ; nous y reviendrons.
- Nous l'avons finie au mont Aigual, à sa station météo, trempés et penauds.
+ Nous l'avons finie au mont Aigoual, à sa station météo, trempés et penauds.
  Tout en bas, en bas de ses 
 \begin_inset Quotes fld
 \end_inset
@@ -4727,8 +4714,8 @@ Sur près de 185
 
 kilomètres, de Sain\SpecialChar \nobreakdash-
 Flour jusqu'à sa capitale, Mende, puis de Mende jusqu'au
- second de ses points culminants, l'Aigual, la Lozère nous aura rincés de
- soleil, de chaleur, d'averses drues et de sentiers de poussière transperçant
+ second de ses points culminants, l'Aigoual, la Lozère nous aura rincés
+ de soleil, de chaleur, d'averses drues et de sentiers de poussière transperçant
  cent petites montagnes et quelques plateaux.
  Elle aura été, aussi, moelleuse d'herbe verte, vivifiante d'eau pure et
  fraîche, orageuse, culturelle et bien des choses encore.
@@ -4858,7 +4845,7 @@ Le troisième soir, nous étions assis sur un monticule de blocs de pierres,
  du ciel.
  Alors, devant l'horizon bleu, violet et noir, des spectres sortirent des
  arbres, absolument partout tout autour, de toutes les tailles, de toutes
- les formes, tous absolument noirs, puis se murent chaotiquement ou bercés
+ les formes, tous absolument noirs, puis se murent chaotiquement, bercés
  par le vent.
  Et nous les regardions au loin, terrifiés.
 \begin_inset VSpace bigskip
@@ -4889,7 +4876,7 @@ Nous venions tout juste de dépasser le lieu-dit de l'Hospitalet, et d'arriver
 
 \begin_layout Standard
 Et ce jour là, il ne nous laissa aucun répit.
- Depuis la mi matinée, nous entendions gronder l'orage, au loin.
+ Depuis la mi-matinée, nous entendions gronder l'orage, au loin.
  Mais, grisés par les joies du voyage, trop confiants, nous n'y portions
  aucun intérêt.
  Grosse erreur ! Car, à l'heure du déjeuner, une pluie monumentale s'abattit
@@ -4918,11 +4905,11 @@ La nuit fut longue et le sommeil rare, malgré le départ de la pluie.
  rafales.
  Le lendemain, nous émergeâmes encore sonnés.
  Rapidement, pourtant, la marche au cœur de ces paysages cévenols et l'ascension
- du mont Aigual (bouleversante et épuisante) nous purgèrent de ces maux.
+ du mont Aigoual (bouleversante et épuisante) nous purgèrent de ces maux.
 \end_layout
 
 \begin_layout Section*
-Lozère, ruisseau et langues de bœuf
+Lozère, ruisseau et langue de bœuf
 \end_layout
 
 \begin_layout Standard
@@ -5192,7 +5179,7 @@ Ouverture de la chasse au gibier d'eau
 
 \begin_layout Standard
 La Camargue nous montra, aussi, ses troupeaux de taureaux noirs et ses chevaux
- blancs, les pattes à demi dans l'eau, un héron garde bœufs posé sur le
+ blancs, les pattes à demi dans l'eau, un héron garde-bœufs posé sur le
  dos.
  Que nous offrit-elle d'autre ? Des piquants essaims de moustiques.
  De longues et larges rizières vertes, un peu jaunies.
@@ -5571,7 +5558,7 @@ La pratique de la chasse soulève un nuage de problématiques et d'aberrations.
  un sport dangereux dans un environnement public, affirmer qu'une tuerie
  participe à préserver la biodiversité, sont quelques bourrelets de ce nuage.
  Cette pratique semble s'éloigner toujours plus des orientations civiques
- françaises contemporaine.
+ françaises contemporaines.
  Pourtant -- par jeu de pression, de pouvoir, de politique...
  ? -- le 
 \emph on
@@ -5676,7 +5663,7 @@ Le soir même, nous sommes accueillis par l'espace naturel sensible de la
 Après une dernière journée, d'une marche tranquille passée en rêverie, nous
  quittons les Alpilles.
  Et déjà, le Lubéron pointe le bout de son nez.
- Mais, malgré l'énergie de petits-déjeuners gargantuesques (faits de muesli,
+ Mais, malgré l'énergie de petits déjeuners gargantuesques (faits de muesli,
  fromage blanc, charcuterie, fruits, chocolat...), la marche a bien du mal
  à nous entrainer.
  La lecture, l'écriture et la sieste semblent, au contraire, plus attrayantes.
@@ -5715,7 +5702,7 @@ Ce début de Lubéron, qui promettait pourtant d'être fort plaisant, nous
  Nous décidons, alors, de rester en contrebas de ces montagnes, profitant
  ainsi de charmants petits villages, vidés de touristes en cette saison.
  Voilà ce que sera, désormais, notre pain quotidien luberonnais : des chemins
- bordés de murets en pierre, des monts qui nous narguent, du raison bien
+ bordés de murets en pierre, des monts qui nous narguent, du raisin bien
  mûr, de grands champs d'oliviers, des dédales de ruelles.
  Cette marche tranquille donne dans le simple et le poétique, et nous comble
  de bonheur.
@@ -5801,8 +5788,8 @@ degrés.
  Nous descendons, un peu sonnés.
  Les jours raccourcissent et les températures dégringolent.
  Ce soir-là -- dans une prairie crottée par les moutons, entourée par les
- pins, ensemencée par les pierre, bucolique -- nous nous couchons tôt, calmes,
- ravis et au frais.
+ pins, ensemencée par les pierres, bucolique -- nous nous couchons tôt,
+ calmes, ravis et au frais.
 \end_layout
 
 \begin_layout Standard
@@ -6070,7 +6057,7 @@ Se laver est une préoccupation majeure de l'homme occidental moderne.
 \end_layout
 
 \begin_layout Standard
-Durant nos deux périples, nous avons du revoir à la baisse nos propres limites.
+Durant nos deux périples, nous avons dû revoir à la baisse nos propres limites.
  Pour tout vous dire, cela ne nous a pas traumatisé ; nous devions avoir
  quelques prédispositions à la crasse...
 \end_layout
@@ -6373,7 +6360,6 @@ Y'a des gens !
 \begin_inset Quotes frd
 \end_inset
 
-.
  Ni une ni deux, il s'accroupit avec autant de célérité, cachant son mètre
  quasi quatre-vingt dix dans...
  30
@@ -6732,7 +6718,7 @@ status open
 \begin_layout Plain Layout
 
 \series bold
-Petits-déjeuners
+Petits déjeuners
 \end_layout
 
 \begin_layout Itemize
